--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "parse-int-array",
-  "version": "0.9.0",
+  "version": "1.0.0",
   "description": "Parse a string to an integer array",
   "main": "parse-int-array.js",
   "scripts": {
@@ -8,14 +8,12 @@
   },
   "keywords": [
     "parseInt",
-    "number",
-    "parser",
-    "integer",
-    "number"
+    "array"
   ],
   "author": "Koji Takami <vzg03566@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "chai": "^3.5.0"
+    "chai": "^4.3.4",
+    "mocha": "^8.3.2"
   }
 }
